@@ -258,6 +258,7 @@ enum ride_type_flags : uint64_t
     RIDE_TYPE_FLAG_LIST_VEHICLES_SEPARATELY = (1ULL << 48),
     RIDE_TYPE_FLAG_SUPPORTS_LEVEL_CROSSINGS = (1ULL << 49),
     RIDE_TYPE_FLAG_IS_SUSPENDED = (1ULL << 50),
+    RIDE_TYPE_FLAG_HAS_LANDSCAPE_DOORS = (1ULL << 51),
 };
 
 // Set on ride types that have a main colour, additional colour and support colour.
