@@ -683,4 +683,11 @@ enum
 
 #define TILE_ELEMENT_COLOUR_MASK 0b00011111
 
+enum
+{
+    LANDSCAPE_DOOR_CLOSED = 0,
+    LANDSCAPE_DOOR_HALF_OPEN = 2,
+    LANDSCAPE_DOOR_OPEN = 3,
+};
+
 bool tile_element_is_underground(TileElement* tileElement);
