@@ -2,6 +2,7 @@
 ------------------------------------------------------------------------
 - Feature: [#6677] Add Discord RPC to macOS builds.
 - Feature: [#6844] Enhanced track designer with ability to add/remove scenery and footpaths.
+- Feature: [#7059] Landscape doors for the Ghost Train.
 - Feature: [#11859] Add on-ride photo section to Air Powered Vertical and Reverse Freefall Coaster.
 - Feature: [#12307] Allow extraction of GOG installer via innoextract (for Linux users).
 - Feature: [#13057] Make GameAction flags accessible by plugins.
